BATTRIAGE-150 Add the Check option / "Checking if CR has an issue which SAT can use to close the CR" also when "Unzip and run build-report" in Parser - FileTree